final edits to first round of reviews

--- a/Manuscript/FinalDraft_rev/ReviewResponses.tex
+++ b/Manuscript/FinalDraft_rev/ReviewResponses.tex
@@ -36,7 +36,7 @@
     6-9 Carlton House Terrace\\
     London SW1Y 5AG\\
     England\\
-    \centerline{\bf{Re: Eco-evolutionary dynamics and collective migration:}}\\
+    \centerline{\bf{Re: Eco-evolutionary dynamics and collective dispersal:}}\\
      \centerline{\bf{implications for salmon metapopulation robustness}}
 }
 
@@ -65,7 +65,7 @@ Because the third term on the right is the derivative of the log of the sum (as 
 \end{equation}
 
 \noindent To clarify, we have made the following edits to the text:\\
-\noindent {\bf Line 113:} \emph{The partial derivative in Eq. 4 determines how the mean trait changes through time due to natural selection [ref], which is proportional to the change in mean fitness with respect to $\mu_i$.
+\noindent {\bf Line 111:} \emph{The partial derivative in Eq. 4 determines how the mean trait changes through time due to natural selection [ref], which is proportional to the change in mean fitness with respect to $\mu_i$.
 We note that the derivative is dependent on both $\mu_i$ and $\mu_j$ due to the influence of the logarithm on the sum.}
 
 \noindent \textcolor{cyan}{
@@ -75,9 +75,9 @@ We note that the derivative is dependent on both $\mu_i$ and $\mu_j$ due to the 
 \noindent {\bf Response 1.2} We are thankful for the Reviewer in pointing out this reference, which we are embarrassed to admit to having overlooked. The model indeed has many similarities to our own, and we now acknowledge its importance and priority within the manuscript. The similarities in the resulting dynamics suggest that what we are observing in the two-population salmon system, as well as the implications that we derive for metapopulation robustness and recovery, may be  relevant and illustrative of a general phenomenon outside of the constraints introduced in the specific formulation of our model. Though as Reviewer I notes, our model while complementary to Ronce and Kirkpatrick 2001, focuses instead on the metapopulation effects (portfolio effects, resilience, and overall robustness) of the observed dynamics rather than a detailed analytical treatment of the dynamics themselves. We highlight areas of complementarity and extension in the revised manuscript.
 
 \noindent We have made the following edits to the text:\\
-\noindent {\bf Line 115:} \emph{This model formulation has parallels to that proposed by Ronce and Kirkpatrick [ref], where habitat specialization evolves between two populations as a function of dispersal, yet differs in that we treat trait evolution mechanistically at some cost to analytical tractability.}\\
-\noindent {\bf Line 191} \emph{These dynamics are also observed in the Ronce and Kirkpatrick model, which they describe as a transition from symmetric to asymmetric states [ref].}
-\noindent {\bf Line XXX} \emph{A salient finding from our results is that straying can lead to the emergence of alternative stable states, pushing one of the populations to high density (the \emph{dominant state}), and one to low density (the \emph{subordinate state}).
+\noindent {\bf Line 113:} \emph{This model formulation has parallels to that proposed by Ronce and Kirkpatrick [ref], where habitat specialization evolves between two populations as a function of dispersal, yet differs in that we treat trait evolution mechanistically at some cost to analytical tractability.}\\
+\noindent {\bf Line 187} \emph{These dynamics are also observed in the Ronce and Kirkpatrick model, which they describe as a transition from symmetric to asymmetric states [ref].}
+\noindent {\bf Line 299} \emph{A salient finding from our results is that straying can lead to the emergence of alternative stable states, pushing one of the populations to high density (the \emph{dominant state}), and one to low density (the \emph{subordinate state}).
 This pattern has been observed in other models of eco-evolutionary dynamics with explicit space [ref], suggesting that it may be a general feature of spatially-linked populations that evolve toward local optima while being hindered by dispersal.}
 
 
@@ -89,7 +89,8 @@ This pattern has been observed in other models of eco-evolutionary dynamics with
 
 According to Kuznetsov (1998), there are three principle bifurcations in discrete maps, from which others are composed: the Fold, Flip (period-doubling), and Neimark-Sacker.
 The Fold bifurcation is generally defined by the dominant eigenvalue $\lambda$ intersecting the unit circle in Real-Imaginary space at ${\rm Re}[\lambda]=+1$.
-We now include a new figure S3 that shows that this is indeed the case for our system, and this was the basis on which we initially identified the bifurcation. Although we are not mathematicians, our understanding is that the fold bifurcation is a general attribute based on this eigenvalue condition, but as the Reviewers indicate, it is not a particularly clear or complete description of what is going on. 
+We now include a new figure S3 that shows that this is indeed the case for our system, and this was the basis on which we initially identified the bifurcation. 
+Our understanding is that the fold bifurcation is a general attribute based on this eigenvalue condition, but as the Reviewers indicate, it is not a particularly clear or complete description of what is going on. 
 A familiar, and more complicated bifurcation that occurs in maps with $\geq2$ parameters is the Discrete Cusp Bifurcation, which occurs when two fold bifurcations intersect at a cusp.
 A one-dimensional transect through the cusp results in behavior similar to that observed for Pitchfork Bifurcations in vector fields (topological normal form for the discrete map: $x \mapsto x + \beta x - x^3$). At the cusp ($\beta=0$), the single fixed point crosses the intersecting fold bifurcations, and here it branches into 3 fixed points; two stable fixed points separated by an unstable fixed point.
 We now identify the bifurcation as a Discrete Cusp bifurcation and mention that it displays dynamics that are visually similar to Pitchfork bifurcations in continuous time systems, which we hope will increase clarity and specificity.
@@ -101,24 +102,24 @@ We now show that it does (figure S4), a feature characteristic of Cusp bifurcati
 This is more evidence that the dynamics described here and in Ronce and Kirkpatrick are perhaps general phenomena of spatially-linked eco-evolutionary systems.
 This perspective is reinforced by the fact that altering parameters between the two sites (creating asymmetry) does not alter the qualitative nature of the system.
 
-% we believe that our 4-dimensional discrete time system crosses a discrete cusp bifurcation at intermediate values of $m$. The discrete cusp bifurcation is characterized by the intersection of two branches of a fold bifurcation, of which the topological normal form is $x \mapsto f(x) = x + \beta_1 + \beta_2 x - x^3$. The eigenvalue evaluated at the steady state $\partial f(x)/\partial x|_{x=x^*}$ increases to unity on the unit circle at the cusp bifurcation $(\beta_1 = 0, \beta_2 = 0)$. 
+% we believe that our 4-dimensional discrete time system crosses a discrete cusp bifurcation at intermediate values of $m$. The discrete cusp bifurcation is characterized by the intersection of two branches of a fold bifurcation, of which the topological normal form is $x \mapsto f(x) = x + \beta_1 + \beta_2 x - x^3$. The eigenvalue evaluated at the steady-state $\partial f(x)/\partial x|_{x=x^*}$ increases to unity on the unit circle at the cusp bifurcation $(\beta_1 = 0, \beta_2 = 0)$. 
 
 \noindent We have made the following edits to the text:\\
-\noindent {\bf Line 115:} \emph{The decline in steady state densities is not gradual: as straying increases, the system crosses a discrete cusp bifurcation (DCB) [ref] whereby the single steady state for the metapopulation bifurcates into two basins of attraction: one at high biomass, and one at low biomass density (figure 1a, 2a).
+\noindent {\bf Line 176:} \emph{The decline in steady-state densities is not gradual: as straying increases, the system crosses a discrete cusp bifurcation (DCB) [ref] whereby the single steady-state for the metapopulation bifurcates into two basins of attraction: one at high biomass, and one at low biomass density (figure 1a, 2a).
 Mean trait values for both populations bifurcate similarly (figure 1b). 
 In discrete systems, the cusp bifurcation is defined by two fold bifurcations intersecting at a cusp point [ref], and is observed when the real part of the dominant eigenvalue of the Jacobian matrix crosses the unit circle at +1 (figure S3).
-Visually, the dynamics are similar to those observed at a pitchfork bifurcation in continuous systems, where a single steady state gives rise to two steady states separated by an unstable fixed point.
+Visually, the dynamics are similar to those observed at a pitchfork bifurcation in continuous systems, where a single steady-state gives rise to two alternative steady-states.
 }
 
 
 \noindent \textcolor{cyan}{
-{\bf Comment 1.4} The ms does not describe how recovery time was measured. The deterministic system returns to an equilibrium asymptotically, i.e., in infinite time. For practice, one defines a return ``close enough" for recovery. The details of this should be given, otherwise the results are not reproducible. Moreover, I think that near the bifurcation point total population size will equilibrate fast, but the distribution of individuals over the two habitats takes a longer time to equilibrate (the system is on the edge between a symmetric and an asymmetric equilibrium). If time to recovery includes the time that $N_1$ and $N_2$ individually reach their steady states, then this can explain the peak of recovery time at the bifurcation; but this does not mean that the total population size takes long to recover. If total population size was monitored, but recovery was interpreted as "return to original" whereas the system attains a different equilibrium (symmetric vs asymmetric, see above), then obviously recovery time will be infinite, but again this does not mean that the population does not recover from near extinction.
+{\bf Comment 1.4} The ms does not describe how recovery time was measured. The deterministic system returns to an equilibrium asymptotically, i.e., in infinite time. For practice, one defines a return ``close enough" for recovery. The details of this should be given, otherwise the results are not reproducible. Moreover, I think that near the bifurcation point total population size will equilibrate fast, but the distribution of individuals over the two habitats takes a longer time to equilibrate (the system is on the edge between a symmetric and an asymmetric equilibrium). If time to recovery includes the time that $N_1$ and $N_2$ individually reach their steady-states, then this can explain the peak of recovery time at the bifurcation; but this does not mean that the total population size takes long to recover. If total population size was monitored, but recovery was interpreted as "return to original" whereas the system attains a different equilibrium (symmetric vs asymmetric, see above), then obviously recovery time will be infinite, but again this does not mean that the population does not recover from near extinction.
 }
 
 \noindent {\bf Response 1.4} We thank the Reviewer and apologize for our lack of clarity. We emphasize that our measure of recovery time is a numerical measurement, as eigenvalue-based (asymptotic) measures are not appropriate for the scale of disturbance that we introduce (extinction in some cases - far from the non-trivial fixed point(s) of the system). The procedure is now described in more detail within the text, and illustrated graphically in an additional supplemental figure (figure S1). In short, we track the recovering aggregate population $N_T=N_1+N_2$ until it is within a standard deviation around the \emph{updated} fixed point (thus accounting for fixed points that are altered by the disturbance). Note that this recovery time is specifically for the aggregate population, such that if a single population takes a long time to recovery relative to the other, the aggregate takes longer to recover as well. If $N_T$ remains within a standard deviation of the final fixed point for some period of time, it is counted as recovered. Accordingly, trajectories that cycle around the fixed point are not counted as recovered until the cycles decay. To ensure reproducibility, all code is provided online in the Github repository: https://github.com/jdyeakel/SalmonStrays.
 
 \noindent We have made the following edits to the text:\\
-\noindent {\bf Line 160:} \emph{Although there is a direct eigenvalue relationship between the rate of return following a small pulse perturbation [ref], because we aimed to 1) assess the effects of a large perturbation, and 2) estimate the time required for all transient effects to decay (including dampened oscillations), we used a simulation-based numerical procedure.
+\noindent {\bf Line 154:} \emph{Although there is a direct eigenvalue relationship between the rate of return following a small pulse perturbation [ref], because we aimed to 1) assess the effects of a large perturbation, and 2) estimate the time required for all transient effects to decay (including dampened oscillations), we used a simulation-based numerical procedure.
 Recovery time was calculated by initiating a disturbance at $t=t_d$, and monitoring $N_T(t_d+t)$ as $t\rightarrow T$, where $T$ is large. 
 The aggregate was deemed recovered at $t_r$, such that recovery time was calculated as $t_r-t_d$, and recovery at $t=t_r$ was measured as the initial $t$ where $N_T(t) < {\rm SD}\left( N_T^* \right)$ for $t\in(t_r,T)$, where $\rm{SD}(\cdot)$ is standard deviation (illustrated in figure S2)}\\
 
@@ -138,7 +139,7 @@ However we agree that PE can change in response to changes to any of the four at
 \noindent {\bf Minor Response 1.1} We now equate straying with dispersal early in the text (it is now also defined in the abstract).
 
 \noindent We have made the following edits to the text:\\
-\noindent {\bf Line 42:} \emph{The rate at which individuals stray, $m$, is in this case synonymous with dispersal and may be linked to errors made at an individual-level that are themselves diminished by migrating in groups and pooling individual choices [refs].}\\
+\noindent {\bf Line 45:} \emph{While anadromous salmonid fishes (genera \emph{Oncorhynchus} and \emph{Salmo}) are renown for returning to their natal spawning habitats with high accuracy and precision after years at sea [refs], there are generally some individuals that `stray' (synonymously used hereafter to refer to dispersal) to non-natal sites to spawn [refs].}\\
 
 \noindent \textcolor{cyan}{
 {\bf Minor Comment 1.2} The figure legends should specify the parameter values used, figure 2 should give a key translating colours to values, figure 3 should have numbers on the axes. Generally, the authors should pay attention to reproducibility.}
@@ -167,8 +168,8 @@ This manuscript can be improved by correcting the bifurcation analysis and by ex
 In general, although discrete cusp bifurcations with pitchfork-like behaviors are a consequence of symmetry (defined by a system where $N_1\rightarrow-N_1$, $N_2\rightarrow-N_2$, $\mu_1\rightarrow-\mu_1$, $\mu_2\rightarrow-\mu_2$ without altering the equations), the general features of the bifurcation need not be altered as symmetry is broken.
 Consider the topological normal form $\dot{x}=h + \beta x - x^3$, which is a continuous system with a perfect pitchfork bifurcation at $\beta = 0,~h=0$.
 It is symmetric in the sense that $x\rightarrow-x$ without altering anything if and only if $h=0$.
-If $h\neq0$, the system is asymmetric, however the pitchfork-like dynamic does not disappear but becomes an imperfect pitchfork where a saddle node bifurcation appears alongside a non-varying steady state.
-This creates a parameter region where alternative steady states exist, separated by an unstable steady state.
+If $h\neq0$, the system is asymmetric, however the pitchfork-like dynamic does not disappear but becomes an imperfect pitchfork where a saddle node bifurcation appears alongside a non-varying steady-state.
+This creates a parameter region where alternative steady-states exist, separated by an unstable steady-state.
 As such, symmetry exists only in a perfect sense (and we describe below why we think our system already violates perfect symmetry), and the observed dynamics that we observe need not require perfect symmetry. 
 However, we agree with the Reviewer that this begs investigation.
 
@@ -183,7 +184,7 @@ We suggest that our analysis is not merely a mathematical construction (interpre
 Similarly the strength of density dependence is calculated at sites 1 and 2 as $\beta(1)=\beta(1+\tilde{rv}_1)$ and $\beta(2)=\beta(1+\tilde{rv}_2)$ where $\tilde{rv}_{1,2}$ are independently drawn from $\rm{Normal}(0,\alpha)$ and $\beta=0.001$.
 Thus as asymmetry ($\alpha$) increases, so do the differences in vital rates between sites.
 
-To investigate the effects of increasing asymmetry on the main dynamical feature of our model, we assessed how increasing $\alpha$ altered the steady state portrait as a function of the straying rate $m$ shown in figure 1a, and this analysis is now included as a supplementary figure (figure S13). As can be seen, greater asymmetry (warm colors in the supplementary figure) does not alter the qualitative nature of the dynamics, and does not significantly change the position of the bifurcation. We take this as strong evidence that the qualitative nature of the system is not a mathematical construction relegated to a small slice of parameter space.
+To investigate the effects of increasing asymmetry on the main dynamical feature of our model, we assessed how increasing $\alpha$ altered the steady-state portrait as a function of the straying rate $m$ shown in figure 1a, and this analysis is now included as a supplementary figure (figure S13). As can be seen, greater asymmetry (warm colors in the supplementary figure) does not alter the qualitative nature of the dynamics, and does not significantly change the position of the bifurcation. We take this as strong evidence that the qualitative nature of the system is not a mathematical construction relegated to a small slice of parameter space.
 
 3) Reviewer 1 pointed to an embarrassing oversight on our part: that a similar model had been explored by Ronce \& Kirkpatrick (Evolution, 2001). This model differed substantially in its formulation: it is continuous (rather than discrete), evolution occurs in the mortality term (rather than the recruitment rate), the strength of selection is determined by the linear difference of trait values and their optima (rather than by mechanistically incorporating the fitness landscape a la Lande 1976), etc. Still, the underlying dynamics appear to accord with those that we describe. This suggests that the dynamics are potentially of a general nature, though we do not investigate how general (that would be an interesting pursuit for another time).
 
@@ -193,7 +194,7 @@ Finally, although we like the idea of modeling changes in resource abundance in 
 {\bf Comment 2.3} Another potentially highly interesting element that has not been studied here is the potential for alternative stable states based on the density-dependent straying rate (subsection b in the Model formulation). The study currently addresses a scenario where the potential for population collapse due to collective navigation is ignored. I see that as the interesting angle; how do the dynamics caused by density-dependent straying interact with the dynamics caused by selective forces as imposed by the different environments on recruitment?
 }
 
-\noindent {\bf Response 2.3} We agree that this is an interesting line of inquiry, but do investigate it in the manuscript. Specifically we analyze scenarios where a) individual populations that collectively stray collapse, and b) both populations that collectively stray suffer near-collapse. If this is in line with what the Reviewer is describing, we suggest that the uploading issues, which prevented delivery of the Supplemental information (and many of the pertinent figures) made the manuscript somewhat opaque with regard to these analyses. We examine the effects of density dependent straying on all aspects of the model, and strive to highlight those results in our revised version.
+\noindent {\bf Response 2.3} We agree that this is an interesting line of inquiry, but do investigate it in the manuscript. Specifically we analyze scenarios where a) individual populations that collectively stray collapse, and b) both populations that collectively stray suffer near-collapse. If this is in line with what the Reviewer is describing, we suggest that the uploading issues, which prevented delivery of the Supplemental information (and many of the pertinent figures) made the manuscript somewhat opaque with regard to these analyses. We examine the effects of density-dependent straying on all aspects of the model, and strive to highlight those results in our revised version.
 
 \noindent \textcolor{cyan}{
 {\bf Comment 2.4} It would be good to include more technical details about how the bifurcation analysis was carried out (or is this present in the missing SI text?). As it is, I have no idea about the numerical techniques that were used or even whether the authors have studied both increasing and decreasing parameter values, as necessary to enable detection of alternative stable states and discontinuities.
@@ -214,14 +215,14 @@ Finally, although we like the idea of modeling changes in resource abundance in 
 \noindent {\bf Response 2.6} We thank the Reviewer for their comment and apologize for our lack of clarity. We have moved the text and attempt to explain our reasonings and justifications more clearly. We have made a figure that illustrates the relationship between straying and $\Delta\theta$ if it is assumed that individuals are less likely to stray into sites with very different trait optima (greater habitat heterogeneity).
 
 \noindent We have made the following edits to the text:\\
-\noindent {\bf Line 136:} \emph{Habitat heterogeneity and the rate of straying are treated both independently, and as parameters that covary.
+\noindent {\bf Line 131:} \emph{Habitat heterogeneity and the rate of straying are treated both independently, and as parameters that covary.
 In the latter instance, we evaluate a case where it is assumed that increased habitat heterogeneity correlates with lower straying rates, and vice versa (illustrated in figure S1).
 Two scenarios may lead to this correlation: 
 (\emph{i}) sites may be distributed over greater spatial distances, where habitat differences are assumed to be exaggerated and the likelihood of straying over greater distances is lower [ref];
 (\emph{ii}) individuals may have behaviors promoting dispersal between habitats with structural or physiognomic similarities [ref].
 In this case, the rate of straying would be greater between habitats with smaller differences in trait optima (lower $\Delta\theta$) and lesser between habitats with greater differences in trait optima (higher $\Delta\theta$).}
 
-\noindent {\bf Line 272:} \emph{Until now, we have treated the rate of straying and habitat heterogeneity as independent parameters, however they may also be assumed to covary.
+\noindent {\bf Line 268:} \emph{Until now, we have treated the rate of straying and habitat heterogeneity as independent parameters, however they may also be assumed to covary.
 For instance, if sites are separated by greater distance, they may be assumed to have increased habitat heterogeneity as well as lower rates of straying.
 Alternatively, individuals may be genetically predisposed to stray into sites that are more similar, such that greater between-site heterogeneity will correspond to lower straying rates.
 We implemented this inverse relationship by setting $m = 0.5(1 + \Delta\theta)^{-1}$ where maximum straying is assumed to occur at $m=0.5$ (perfect mixing; figure S1).
@@ -258,7 +259,7 @@ Typos/errors on lines:
 \end{itemize}
 }
 
-\noindent {\bf Minor Response 2.1} We thank the Reviewer for being so meticulous and pointing out these errors. Although the noted issues with the figures (missing axes, labels) and missing supplemental materials appears to have been a problem with the upload, we acknowledge that the other issues were due to a lack of thoroughness on our part and have been corrected.
+\noindent {\bf Minor Response 2.1} We thank the Reviewer for pointing out these errors. Although the noted issues with the figures (missing axes, labels) and missing supplemental materials appears to have been a problem generated during the upload, we acknowledge that the other issues were due to a lack of thoroughness on our part and have since been corrected.
 
 \vspace{5mm}
 
