--- a/Manuscript/FinalDraft_rev/supp.tex
+++ b/Manuscript/FinalDraft_rev/supp.tex
@@ -122,7 +122,7 @@ singlelinecheck=false
 \centering
 \includegraphics[width=0.35\textwidth]{fig_hysteresis.pdf}
 \caption{
-Increasing the straying rate results in the transition from a single steady state for both populations to a dominant and subordinate states. If the straying rate is subsequently lowered, the single steady state is not easily obtained, which is the hallmark of hysteresis.
+Increasing the straying rate results in the transition from a single steady-state for both populations to a dominant and subordinate states. If the straying rate is subsequently lowered, the single steady-state is not easily obtained, which is the hallmark of hysteresis.
 } \label{fig:hysteresis}
 \end{figure}
 
@@ -165,7 +165,7 @@ singlelinecheck=false
 \centering
 \includegraphics[width=0.9\textwidth]{fig_relax_highh.pdf}
 \caption{
-Recovery time of $N_T$ following the extinction of either the low-density (light gray) or high-density (gray) population, or the near-collapse of both (dark gray) assuming (a) constant straying rates $m$ and (b) density-dependent straying rates (evaluated at the steady state $m^*$) with trait heritability $h^2=0.8$.
+Recovery time of $N_T$ following the extinction of either the low-density (light gray) or high-density (gray) population, or the near-collapse of both (dark gray) assuming (a) constant straying rates $m$ and (b) density-dependent straying rates (evaluated at the steady-state $m^*$) with trait heritability $h^2=0.8$.
 If $m$ is density-dependent, in the alternative stable state regime there are two straying rates observed: one each for the low- and high-density populations, respectively, which are linked by a horizontal line.
 } \label{fig:relax_highh}
 \end{figure}
@@ -193,7 +193,7 @@ singlelinecheck=false
 \caption{
 (a) Recovery time after near collapse of both populations as a function of straying rate $m$ and habitat heterogeneity $\Delta\theta$.
 (b) The same as (a) but including recovery times when straying is density-dependent evaluated at $m^*$, shown by linked point pairs.
-Recovery times for systems with density-dependent straying are longer when straying is low and shorter when straying is high, mirroring the change in portfolio effects with respect to density dependent straying shown in figure \ref{extfig-fig:thetaPE}.
+Recovery times for systems with density-dependent straying are longer when straying is low and shorter when straying is high, mirroring the change in portfolio effects with respect to density-dependent straying shown in figure \ref{extfig-fig:thetaPE}.
 } \label{fig:relaxtheta}
 \end{figure}
 
@@ -206,7 +206,7 @@ singlelinecheck=false
   \centering
   \includegraphics[width=0.35\textwidth]{fig_MDPE_hm_mtheta_rt.pdf}
   \caption{
-  Portfolio effects as a function of straying rate $m$ and trait heritability $h^2$ when the rate of straying is $m = 0.5(1 + \Delta\theta)^{-1}$. Alternative steady states emerge for low values of $m$ (left of the cusp bifurcation, denoted by the black line), whereas a single steady state exists for high $m$.
+  Portfolio effects as a function of straying rate $m$ and trait heritability $h^2$ when the rate of straying is $m = 0.5(1 + \Delta\theta)^{-1}$. Alternative steady-states emerge for low values of $m$ (left of the cusp bifurcation, denoted by the black line), whereas a single steady-state exists for high $m$.
   } \label{fig:mthetaPE}
 \end{figure}
 
@@ -236,7 +236,7 @@ singlelinecheck=false
   \includegraphics[width=0.8\textwidth]{fig_relax_mtheta.pdf}
   \caption{
   Recovery times for three disturbance types when the straying rate covaries with habitat heterogeneity as $m = 0.5(1 + \Delta\theta)^{-1}$ for constant (a) and density-dependent (b) straying rates.
-  The cusp bifurcation is not as clear in (b) because $\Delta\theta$ is a function of the individual straying rate $m_0$, whereas the x-axis in (b) is the straying rate at the steady state $m^*$.
+  The cusp bifurcation is not as clear in (b) because $\Delta\theta$ is a function of the individual straying rate $m_0$, whereas the x-axis in (b) is the straying rate at the steady-state $m^*$.
   Despite this difference, the general behavior shown in (a) are the same in (b).
   } \label{fig:mthetamvm}
 \end{figure}
@@ -248,11 +248,11 @@ singlelinecheck=false
 \centering
 \includegraphics[width=0.35\textwidth]{fig_asymdensity.pdf}
 \caption{
-Steady state densities of both populations as a function of $m$, where a cusp bifurcation indicates the emergence of alternative steady states: one in a dominant state and one in a subordinate state.
-Steady states for populations with symmetrical values ($\alpha=0$) in the vital rates $r_{\rm max}$ and $\beta$ are shown with cool tones.
+Steady-state densities of both populations as a function of $m$, where a cusp bifurcation indicates the emergence of alternative steady-states: one in a dominant state and one in a subordinate state.
+Steady-states for populations with symmetrical values ($\alpha=0$) in the vital rates $r_{\rm max}$ and $\beta$ are shown with cool tones.
 As the asymmetry among populations between sites increases ($\alpha>0$), their vital rates diverge, such that the maximal growth at sites 1 and 2 is now $r_{\rm max}(1)=r_{\rm max}(1+\tilde{rv}_1)$ and $r_{\rm max}(2)=r_{\rm max}(1+\tilde{rv}_2)$ where $rv_{1,2}$ are independently drawn from $\rm{Normal}(0,\alpha)$ and $r_{\rm max}=2$. 
 Similarly the strength of density dependence is calculated at sites 1 and 2 as $\beta(1)=\beta(1+\tilde{rv}_1)$ and $\beta(2)=\beta(1+\tilde{rv}_2)$ where $\tilde{rv}_{1,2}$ are independently drawn from $\rm{Normal}(0,\alpha)$ and $\beta=0.001$.
-Steady states for populations with increasingly asymmetric values ($\alpha\rightarrow 0.1$) for vital rates $r_{\rm max}$ and $\beta$ are shown in warmer tones.
+Steady-states for populations with increasingly asymmetric values ($\alpha\rightarrow 0.1$) for vital rates $r_{\rm max}$ and $\beta$ are shown in warmer tones.
 } \label{fig:symmetry}
 \end{figure}
 
